tests/output/self_hosted/wrong_args_auto_error.txt
tests/wrong_args_auto_error.oomph:4: error: expected 1 argument, got 2

    lel.remove_prefix("foo", "bar")
    ^^^^^^^^^^^^^^^^^^

